@@ -1,0 +1,5 @@
+#include <stdio.h>
+
+void myfuncb() {
+    printf("myfuncb\n");
+}
