@@ -1,0 +1,5 @@
+#include <stdio.h>
+
+void myfuncc() {
+    printf("myfuncc\n");
+}
